# example_google_test

./: CMakeLists.txt  README.md  arithmetic.cpp  arithmetic.hpp  main.cpp  math.cpp  math.hpp
test/: CMakeLists.txt  test.cpp
